--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,7 +21,8 @@
     "tailwindcss": "^4.1.5",
     "tw-animate-css": "^1.2.9",
     "vue": "^3.5.13",
-    "vue-router": "^4.5.1"
+    "vue-router": "^4.5.1",
+    "vue-sonner": "^1.3.2"
   },
   "devDependencies": {
     "@types/node": "^22.15.12",
